fix: ts error (merge request !5)
Squash merge branch 'fix/tserror' into 'develop'
fix: ts error


Co-author: pengYYYYY <pengyue970715@gmail.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,5 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "src/config/proxy.ts", "src/pages/detail/base/index.js"]
+  "include": ["**/*.ts", "src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "src/config/proxy.ts", "src/pages/detail/base/index.js"]
 }
