feat: upgrade the third phase of the component

--- a/.gitignore
+++ b/.gitignore
@@ -17,15 +17,7 @@ coverage
 test-report.html
 .idea/
 yarn.lock
+yarn-error.log
 *.zip
 .history
-script/test/cypress/screenshots
-script/test/cypress/videos
-script/test/cypress/results
-script/test/cypress/support
-results/
-yarn-error.log
-cypress
-cypress.json
-Dockerfile
-robotMsg.json
+.stylelintcache
