--- a/.eslintignore
+++ b/.eslintignore
@@ -2,29 +2,12 @@ snapshot*
 dist
 lib
 es
+esm
 node_modules
-common
+src/_common
 static
 cypress
 script/test/cypress
 _site
 temp*
 static/
-
-examples
-site/*
-!site/v3.js
-src/addon
-src/calendar
-src/locale
-src/upload
-src/dropdown
-src/transfer
-src/time-picker
-src/utils
-src/textarea
-typings
-dist
-es
-lib
-types
