--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "tdesign-vue-next-starter",
   "version": "0.0.1",
   "scripts": {
-    "dev:mock": "vite --open --mode mock",
-    "dev": "vite --open --mode development",
-    "dev:linux": "vite --mode developmenet",
+    "start:mock": "vite --open --mode mock",
+    "start": "vite --open --mode development",
     "build:test": "vite build --mode test",
     "build": "vue-tsc --noEmit && vite build",
     "serve": "vite preview",
@@ -27,9 +26,9 @@
   "devDependencies": {
     "@commitlint/cli": "^13.1.0",
     "@commitlint/config-conventional": "^13.1.0",
+    "@types/echarts": "^4.9.10",
     "@typescript-eslint/eslint-plugin": "^4.29.3",
     "@typescript-eslint/parser": "^4.29.3",
-    "@types/echarts": "^4.9.10",
     "@vitejs/plugin-vue": "^1.3.0",
     "@vitejs/plugin-vue-jsx": "^1.1.7",
     "@vue/compiler-sfc": "^3.0.5",
@@ -47,7 +46,7 @@
     "less": "^4.1.1",
     "mockjs": "^1.1.0",
     "prettier": "^2.4.1",
-    "stylelint": "^13.13.1",
+    "stylelint": "^14.1.0",
     "stylelint-config-airbnb": "^0.0.0",
     "stylelint-order": "^4.1.0",
     "stylelint-scss": "^3.20.0",
