fix/githubaction/config (#14)
* fix: githubactions config

* fix: update build env

* fix: remove cache

Co-authored-by: ivringpeng <pengyue970725@gmail.com>

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "start:mock": "vite --open --mode mock",
     "start": "vite --open --mode development",
     "build:test": "vite build --mode test",
-    "build": "vue-tsc --noEmit && vite build",
+    "build": "vue-tsc --noEmit && vite build --mode release",
     "preview": "vite preview",
     "lint": "eslint --ext .vue,.js,.jsx,.ts,.tsx ./ --max-warnings 0",
     "lint:fix": "eslint --ext .vue,.js,jsx,.ts,.tsx ./ --max-warnings 0 --fix",
