--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -8,5 +8,10 @@ jobs:
   MAIN_PULL_REQUEST:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/install-dep@develop
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+      - run: npm install
+        shell: bash
       - run: npm run lint
