--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "tdesign-vue-next-starter",
   "version": "0.0.1",
   "scripts": {
-    "start:mock": "vite --open --mode mock",
-    "start": "vite --open --mode development",
+    "dev:mock": "vite --open --mode mock",
+    "dev": "vite --open --mode development",
     "build:test": "vite build --mode test",
     "build": "vue-tsc --noEmit && vite build --mode release",
     "preview": "vite preview",
@@ -17,7 +17,7 @@
     "echarts": "^5.2.1",
     "nprogress": "^0.2.0",
     "qrcode.vue": "^3.2.2",
-    "tdesign-vue-next": "^0.4.1",
+    "tdesign-vue-next": "^0.5.0",
     "vue": "^3.1.5",
     "vue-router": "^4.0.11",
     "vue3-clipboard": "^1.0.0",
