--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "dependencies": {
     "dayjs": "^1.10.6",
-    "echarts": "^5.2.1",
+    "echarts": "~5.1.1",
     "nprogress": "^0.2.0",
     "qrcode.vue": "^3.2.2",
     "tdesign-vue-next": "^0.5.0",
@@ -27,6 +27,7 @@
     "@commitlint/cli": "^15.0.0",
     "@commitlint/config-conventional": "^13.1.0",
     "@types/echarts": "^4.9.10",
+    "@types/ws": "^8.2.2",
     "@typescript-eslint/eslint-plugin": "^4.29.3",
     "@typescript-eslint/parser": "^4.29.3",
     "@vitejs/plugin-vue": "^1.3.0",
