--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "tdesign-vue-next-starter",
   "version": "0.0.1",
   "scripts": {
-    "start:mock": "vite --open --mode mock",
-    "start": "vite --open --mode development",
+    "dev:mock": "vite --open --mode mock",
+    "dev": "vite --open --mode development",
     "build:test": "vite build --mode test",
     "build": "vue-tsc --noEmit && vite build --mode release",
     "preview": "vite preview",
@@ -14,10 +14,10 @@
   },
   "dependencies": {
     "dayjs": "^1.10.6",
-    "echarts": "^5.2.1",
+    "echarts": "~5.1.1",
     "nprogress": "^0.2.0",
     "qrcode.vue": "^3.2.2",
-    "tdesign-vue-next": "^0.4.1",
+    "tdesign-vue-next": "^0.5.0",
     "vue": "^3.1.5",
     "vue-router": "^4.0.11",
     "vue3-clipboard": "^1.0.0",
@@ -27,6 +27,7 @@
     "@commitlint/cli": "^15.0.0",
     "@commitlint/config-conventional": "^13.1.0",
     "@types/echarts": "^4.9.10",
+    "@types/ws": "^8.2.2",
     "@typescript-eslint/eslint-plugin": "^4.29.3",
     "@typescript-eslint/parser": "^4.29.3",
     "@vitejs/plugin-vue": "^1.3.0",
@@ -52,7 +53,7 @@
     "stylelint-order": "^4.1.0",
     "stylelint-scss": "^4.0.0",
     "typescript": "^4.4.3",
-    "vite": "^2.4.4",
+    "vite": "^2.7.1",
     "vite-plugin-mock": "^2.9.6",
     "vite-plugin-svg-sprite-component": "^1.0.10",
     "vite-svg-loader": "^3.1.0",
