--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
   },
   "dependencies": {
     "dayjs": "^1.10.6",
-    "echarts": "~5.1.1",
+    "echarts": "~5.1.2",
+    "hex-to-hsl": "^1.0.2",
     "nprogress": "^0.2.0",
     "qrcode.vue": "^3.2.2",
     "tdesign-vue-next": "^0.5.0",
+    "tvision-color": "^1.3.1",
     "vue": "^3.1.5",
+    "vue-color-kit": "^1.0.5",
     "vue-router": "^4.0.11",
     "vue3-clipboard": "^1.0.0",
     "vuex": "^4.0.2"
