--- a/package.json
+++ b/package.json
@@ -14,13 +14,12 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@tencent/ivring-peng-vue-next": "^0.6.0-alpha.3",
     "dayjs": "^1.10.6",
     "echarts": "~5.1.2",
     "hex-to-hsl": "^1.0.2",
     "nprogress": "^0.2.0",
     "qrcode.vue": "^3.2.2",
-    "tdesign-vue-next": "^0.5.0",
+    "tdesign-vue-next": "0.5.0-alpha.0",
     "tvision-color": "^1.3.1",
     "vue": "^3.1.5",
     "vue-color-kit": "^1.0.5",
