--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "hex-to-hsl": "^1.0.2",
     "nprogress": "^0.2.0",
     "qrcode.vue": "^3.2.2",
-    "tdesign-vue-next": "^0.6.0",
+    "tdesign-vue-next": "0.6.2",
     "tvision-color": "^1.3.1",
     "vue": "^3.1.5",
     "vue-color-kit": "^1.0.5",
