--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "cz-conventional-changelog": "^3.3.0",
     "dayjs": "^1.10.6",
     "echarts": "~5.1.2",
     "hex-to-hsl": "^1.0.2",
     "nprogress": "^0.2.0",
     "qrcode.vue": "^3.2.2",
+    "tdesign-icons-vue-next": "^0.0.6",
     "tdesign-vue-next": "0.6.4",
     "tvision-color": "^1.3.1",
     "vue": "^3.1.5",
