--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -1,28 +1,15 @@
+# 文件名建议统一为 pull-request.yml 
+# 应用 test-build.yml 的 demo
+
 name: MAIN_PULL_REQUEST
 
 on:
   pull_request:
     branches: [develop, main]
+    types: [opened, synchronize, reopened]
 
 jobs:
-  MAIN_PULL_REQUEST:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Cache nodemodules
-        uses: actions/cache@v2
-        env:
-          cache-name: cache-nodemodules
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package.json') }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-
-            ${{ runner.os }}-build-
-            ${{ runner.os }}-
-      - uses: actions/setup-node@v2
-        with:
-          node-version: '16'
-      - run: npm install
-        shell: bash
-      - run: npm run lint
+  call-test-build:
+    uses: Tencent/tdesign/.github/workflows/test-build.yml@main
+
+# install lint
