--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "nprogress": "^0.2.0",
     "qrcode.vue": "^3.2.2",
     "tdesign-icons-vue-next": "^0.0.6",
-    "tdesign-vue-next": "^0.8.0",
+    "tdesign-vue-next": "0.8.1",
     "tvision-color": "^1.3.1",
     "vue": "^3.2.31",
     "vue-color-kit": "^1.0.5",
