--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-less": "^1.0.1",
     "stylelint-order": "^4.1.0",
-    "typescript": "^4.4.3",
+    "typescript": "~4.4.3",
     "vite": "^2.7.1",
     "vite-plugin-mock": "^2.9.6",
     "vite-svg-loader": "^3.1.0",
