--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,9 +11,10 @@
     "noEmit": true,
     "baseUrl": "./",
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": ["src/*"],
+      "#/*": ["types/*"]
     }
   },
-  "include": ["**/*.ts", "src/**/*.d.ts", "src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"],
+  "include": ["**/*.ts", "src/**/*.d.ts","types/**/*.d.ts", "src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"],
   "compileOnSave": false
 }
