--- a/.eslintrc
+++ b/.eslintrc
@@ -60,6 +60,8 @@
         "varsIgnorePattern": "^_"
       }
     ],
+    "no-use-before-define": "off",
+    "@typescript-eslint/no-use-before-define": "off",
     "@typescript-eslint/ban-ts-comment": "off",
     "@typescript-eslint/ban-types": "off"
   },
