--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,10 +11,10 @@
     "noEmit": true,
     "baseUrl": "./",
     "paths": {
-      "@/*": ["src/*"],
-      "#/*": ["types/*"]
+      "@/*": ["src/*"]
     }
   },
-  "include": ["**/*.ts", "src/**/*.d.ts","types/**/*.d.ts", "src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"],
+  "include": ["**/*.ts", "src/**/*.d.ts",
+      "src/types/**/*.d.ts", "src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"],
   "compileOnSave": false
 }
