--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.27.2",
     "dayjs": "^1.10.6",
     "echarts": "~5.1.2",
+    "lodash-es": "^4.17.21",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.11",
     "qrcode.vue": "^3.2.2",
@@ -36,6 +37,8 @@
     "@commitlint/cli": "^16.2.1",
     "@commitlint/config-conventional": "^16.2.1",
     "@types/echarts": "^4.9.10",
+    "@types/lodash-es": "^4.17.6",
+    "@types/qs": "^6.9.7",
     "@types/ws": "^8.2.2",
     "@typescript-eslint/eslint-plugin": "^4.29.3",
     "@typescript-eslint/parser": "^4.29.3",
