--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "tvision-color": "^1.3.1",
     "vue": "^3.2.31",
     "vue-clipboard3": "^2.0.0",
-    "vue-router": "^4.0.11"
+    "vue-router": "~4.0.11"
   },
   "devDependencies": {
     "@commitlint/cli": "^16.2.1",
