--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,8 @@
     "sourceMap": true,
     "resolveJsonModule": true,
     "esModuleInterop": true,
+    "skipLibCheck": true,
+    "allowSyntheticDefaultImports": true,
     "lib": ["esnext", "dom"],
     "types": ["vite/client"],
     "noEmit": true,
