--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,10 @@
     "sourceMap": true,
     "resolveJsonModule": true,
     "esModuleInterop": true,
+    "skipLibCheck": true,
+    "allowSyntheticDefaultImports": true,
     "lib": ["esnext", "dom"],
+    "types": ["vite/client"],
     "noEmit": true,
     "baseUrl": "./",
     "paths": {
