--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
     "less": "^4.1.3",
     "lint-staged": "^13.1.0",
     "mockjs": "^1.1.0",
+    "postcss-html": "^1.5.0",
+    "postcss-less": "^6.0.0",
     "prettier": "^2.8.1",
     "stylelint": "~14.9.1",
     "stylelint-config-prettier": "~9.0.4",
