--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tdesign-vue-next-starter",
-  "version": "0.7.2",
+  "version": "0.7.1",
   "scripts": {
     "dev:mock": "vite --open --mode mock",
     "dev": "vite --open --mode development",
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@types/nprogress": "^0.2.0",
+    "@vueuse/core": "^9.13.0",
     "axios": "^1.2.6",
     "dayjs": "^1.11.7",
     "echarts": "5.1.2",
@@ -33,7 +34,6 @@
     "tdesign-vue-next": "^1.0.8",
     "tvision-color": "^1.5.0",
     "vue": "^3.2.45",
-    "vue-clipboard3": "^2.0.0",
     "vue-router": "~4.1.6"
   },
   "devDependencies": {
