--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,5 +21,15 @@
     "editor.formatOnSave": true,
     "editor.defaultFormatter": "dbaeumer.vscode-eslint"
   },
-  "cSpell.words": ["tdesign", "tvision", "echarts", "nprogress", "commitlint", "stylelint", "pinia", "qrcode"]
+  "cSpell.words": [
+    "tdesign",
+    "tvision",
+    "echarts",
+    "nprogress",
+    "commitlint",
+    "stylelint",
+    "pinia",
+    "qrcode"
+  ],
+  "nuxt.isNuxtApp": false
 }
