--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "tvision-color": "^1.5.0",
     "vue": "^3.2.47",
     "vue-clipboard3": "^2.0.0",
+    "vue-i18n": "^9.2.2",
     "vue-router": "~4.1.6"
   },
   "devDependencies": {
