--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "qrcode.vue": "^3.3.4",
     "qs": "^6.11.1",
     "tdesign-icons-vue-next": "^0.1.8",
+    "tdesign-theme-generator": "^1.0.0",
     "tdesign-vue-next": "^1.2.2",
     "tvision-color": "^1.5.0",
     "vue": "^3.2.47",
