--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,6 @@
-* text eol=lf
-*.png binary
+*.ts    text eol=lf
+*.vue   text eol=lf
+*.tsx   text eol=lf
+*.jsx   text eol=lf
+*.html  text eol=lf
+*.json  text eol=lf
