chore: lint-staged remove git add

--- a/package.json
+++ b/package.json
@@ -83,12 +83,10 @@
   "lint-staged": {
     "*.{js,jsx,vue,ts,tsx}": [
       "prettier --write",
-      "npm run lint:fix",
-      "git add ."
+      "npm run lint:fix"
     ],
     "*.{html,vue,vss,sass,less}": [
-      "npm run stylelint:fix",
-      "git add ."
+      "npm run stylelint:fix"
     ]
   }
 }
