chore: fix typo

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint": "eslint --ext .vue,.js,.jsx,.ts,.tsx ./ --max-warnings 0",
     "lint:fix": "eslint --ext .vue,.js,jsx,.ts,.tsx ./ --max-warnings 0 --fix",
     "stylelint": "stylelint src/**/*.{html,vue,sass,less}",
-    "stylelint:fix": "stylelint --fix src/**/*.{html,vue,vss,sass,less}",
+    "stylelint:fix": "stylelint --fix src/**/*.{html,vue,css,sass,less}",
     "prepare": "husky install",
     "site:preview": "npm run build && cp -r dist _site",
     "test": "echo \"no test specified,work in process\"",
@@ -84,7 +84,7 @@
       "prettier --write",
       "npm run lint:fix"
     ],
-    "*.{html,vue,vss,sass,less}": [
+    "*.{html,vue,css,sass,less}": [
       "npm run stylelint:fix"
     ]
   }
