--- a/.eslintrc
+++ b/.eslintrc
@@ -17,7 +17,7 @@
     "defineProps": "readonly",
     "defineEmits": "readonly"
   },
-  "plugins": ["vue", "@typescript-eslint", "simple-import-sort"],
+  "plugins": ["vue", "@typescript-eslint","import"],
   "parserOptions": {
     "parser": "@typescript-eslint/parser",
     "sourceType": "module",
@@ -38,6 +38,7 @@
     "no-shadow": "off",
     "guard-for-in": "off",
 
+    "import/order": "error",
     "import/extensions": "off",
     "import/no-unresolved": "off",
     "import/no-extraneous-dependencies": "off",
@@ -66,8 +67,6 @@
     "@typescript-eslint/ban-ts-comment": "off",
     "@typescript-eslint/ban-types": "off",
     "class-methods-use-this": "off", // 因为AxiosCancel必须实例化而能静态化所以加的规则，如果有办法解决可以取消
-    "simple-import-sort/imports": "error",
-    "simple-import-sort/exports": "error"
   },
   "overrides": [
     {
