--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "tdesign-icons-vue-next": "^0.2.2",
     "tdesign-vue-next": "^1.6.8",
     "tvision-color": "^1.6.0",
-    "vue": "^3.3.8",
+    "vue": "~3.3.8",
     "vue-i18n": "^9.6.5",
     "vue-router": "~4.2.4"
   },
