--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@tencent/tdesign-vue-next-starter",
   "version": "0.9.0",
+  "type": "module",
   "scripts": {
     "dev:mock": "vite --open --mode mock",
     "dev": "vite --open --mode development",
