feat: 将代码迁移至TS严格模式 (#684)
* feat: 将现有代码迁移至TS严格模式 - 禁止隐匿Any的This

* feat: 将代码迁移至TS严格模式 - 启用JS严格模式 和 绑定类型检查

* feat: 移除无用钩子，修改为工具API

* feat: 将代码迁移至TS严格模式 - 启用严格函数类型检查

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,11 @@
     "paths": {
       "@/*": ["src/*"]
     },
-    "noImplicitAny": true
+    "noImplicitAny": true,
+    "strictFunctionTypes": true,
+    "strictBindCallApply": true,
+    "noImplicitThis": true,
+    "alwaysStrict": true,
   },
   "include": [
     "**/*.ts",
