--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "tdesign-icons-vue-next": "^0.2.2",
     "tdesign-vue-next": "^1.9.3",
     "tvision-color": "^1.6.0",
-    "vue": "~3.4.21",
+    "vue": "3.3.13",
     "vue-i18n": "^9.9.1",
     "vue-router": "~4.3.0"
   },
