--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "test:coverage": "echo \"no test:coverage specified,work in process\""
   },
   "dependencies": {
+    "@types/mockjs": "^1.0.10",
     "@vueuse/core": "^10.7.2",
     "axios": "^1.6.7",
     "dayjs": "^1.11.10",
