--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "less": "^4.2.0",
     "lint-staged": "^15.2.2",
     "mockjs": "^1.1.0",
+    "@types/mockjs": "^1.0.10",
     "postcss-html": "^1.6.0",
     "postcss-less": "^6.0.0",
     "prettier": "^3.2.5",
