--- a/package.json
+++ b/package.json
@@ -15,40 +15,39 @@
     "lint:fix": "eslint --ext .vue,.js,jsx,.ts,.tsx ./ --max-warnings 0 --fix",
     "stylelint": "stylelint src/**/*.{html,vue,sass,less}",
     "stylelint:fix": "stylelint --fix src/**/*.{html,vue,css,sass,less}",
-    "prepare": "husky install",
+    "prepare": "husky",
     "site:preview": "npm run build && cp -r dist _site",
     "test": "echo \"no test specified,work in process\"",
     "test:coverage": "echo \"no test:coverage specified,work in process\""
   },
   "dependencies": {
-    "@vueuse/core": "^10.7.2",
-    "axios": "^1.6.7",
-    "dayjs": "^1.11.10",
+    "@vueuse/core": "^11.0.0",
+    "axios": "^1.7.4",
+    "dayjs": "^1.11.12",
     "echarts": "5.4.3",
     "lodash": "^4.17.21",
     "nprogress": "^0.2.0",
-    "pinia": "^2.1.7",
-    "pinia-plugin-persistedstate": "^3.2.0",
+    "pinia": "^2.2.2",
+    "pinia-plugin-persistedstate": "^3.2.1",
     "qrcode.vue": "^3.4.1",
-    "qs": "^6.11.2",
-    "tdesign-icons-vue-next": "^0.2.2",
-    "tdesign-vue-next": "^1.9.3",
+    "qs": "^6.13.0",
+    "tdesign-icons-vue-next": "^0.2.4",
+    "tdesign-vue-next": "^1.9.9",
     "tvision-color": "^1.6.0",
-    "vue": "3.3.13",
-    "vue-i18n": "^9.9.1",
-    "vue-router": "~4.3.0"
+    "vue": "3.4.38",
+    "vue-router": "~4.3.3"
   },
   "devDependencies": {
-    "@commitlint/cli": "^18.6.0",
-    "@commitlint/config-conventional": "^18.6.0",
-    "@types/echarts": "^4.9.21",
-    "@types/lodash": "^4.17.6",
+    "@commitlint/cli": "^19.4.0",
+    "@commitlint/config-conventional": "^19.2.2",
+    "@types/echarts": "^4.9.22",
+    "@types/lodash": "^4.17.7",
     "@types/nprogress": "^0.2.3",
-    "@types/qs": "^6.9.11",
+    "@types/qs": "^6.9.15",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
-    "@vitejs/plugin-vue": "^5.0.4",
-    "@vitejs/plugin-vue-jsx": "^3.0.2",
+    "@vitejs/plugin-vue": "^5.1.2",
+    "@vitejs/plugin-vue-jsx": "^4.0.1",
     "@vue/compiler-sfc": "~3.3.8",
     "@vue/eslint-config-typescript": "^12.0.0",
     "commitizen": "^4.3.0",
@@ -61,22 +60,22 @@
     "eslint-plugin-simple-import-sort": "^12.0.0",
     "eslint-plugin-vue": "^9.21.1",
     "eslint-plugin-vue-scoped-css": "^2.7.2",
-    "husky": "^9.0.10",
+    "husky": "^9.1.4",
     "less": "^4.2.0",
-    "lint-staged": "^15.2.2",
+    "lint-staged": "^15.2.9",
     "mockjs": "^1.1.0",
     "@types/mockjs": "^1.0.10",
-    "postcss-html": "^1.6.0",
+    "postcss-html": "^1.7.0",
     "postcss-less": "^6.0.0",
-    "prettier": "^3.2.5",
-    "stylelint": "~16.2.1",
-    "stylelint-config-standard": "^36.0.0",
+    "prettier": "^3.3.3",
+    "stylelint": "~16.8.2",
+    "stylelint-config-standard": "^36.0.1",
     "stylelint-order": "~6.0.4",
-    "typescript": "~5.4.3",
-    "vite": "^5.1.0",
+    "typescript": "~5.5.4",
+    "vite": "^5.4.1",
     "vite-plugin-mock": "^3.0.1",
     "vite-svg-loader": "^5.1.0",
-    "vue-tsc": "^1.8.27"
+    "vue-tsc": "^2.0.29"
   },
   "config": {
     "commitizen": {
