--- a/package.json
+++ b/package.json
@@ -21,21 +21,21 @@
     "test:coverage": "echo \"no test:coverage specified,work in process\""
   },
   "dependencies": {
-    "@vueuse/core": "^11.0.0",
-    "axios": "^1.7.4",
-    "dayjs": "^1.11.12",
+    "@vueuse/core": "^11.0.3",
+    "axios": "^1.7.7",
+    "dayjs": "^1.11.13",
     "echarts": "5.4.3",
     "lodash": "^4.17.21",
     "nprogress": "^0.2.0",
     "pinia": "^2.2.2",
-    "pinia-plugin-persistedstate": "^3.2.1",
+    "pinia-plugin-persistedstate": "^3.2.3",
     "qrcode.vue": "^3.4.1",
     "qs": "^6.13.0",
-    "tdesign-icons-vue-next": "^0.2.4",
+    "tdesign-icons-vue-next": "^0.2.6",
     "tdesign-vue-next": "^1.9.9",
     "tvision-color": "^1.6.0",
-    "vue": "3.4.38",
-    "vue-router": "~4.3.3"
+    "vue": "3.5.0",
+    "vue-router": "^4.4.3"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.4.0",
@@ -46,9 +46,9 @@
     "@types/qs": "^6.9.15",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
-    "@vitejs/plugin-vue": "^5.1.2",
+    "@vitejs/plugin-vue": "^5.1.3",
     "@vitejs/plugin-vue-jsx": "^4.0.1",
-    "@vue/compiler-sfc": "~3.3.8",
+    "@vue/compiler-sfc": "~3.5.0",
     "@vue/eslint-config-typescript": "^12.0.0",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
@@ -60,7 +60,7 @@
     "eslint-plugin-simple-import-sort": "^12.0.0",
     "eslint-plugin-vue": "^9.21.1",
     "eslint-plugin-vue-scoped-css": "^2.7.2",
-    "husky": "^9.1.4",
+    "husky": "^9.1.5",
     "less": "^4.2.0",
     "lint-staged": "^15.2.9",
     "mockjs": "^1.1.0",
@@ -72,10 +72,10 @@
     "stylelint-config-standard": "^36.0.1",
     "stylelint-order": "~6.0.4",
     "typescript": "~5.5.4",
-    "vite": "^5.4.1",
+    "vite": "^5.4.3",
     "vite-plugin-mock": "^3.0.1",
     "vite-svg-loader": "^5.1.0",
-    "vue-tsc": "^2.0.29"
+    "vue-tsc": "^2.1.4"
   },
   "config": {
     "commitizen": {
