feat(Vite Config): 新增环境变量
1. 修复环境变量类型丢失
2. 修改错误变量名写法
3. 调整配置顺序，将常用配置向上移动
4. 将配置项抽出到环境变量文件
5. 对环境变量进行注释描述类型补全
6. 环境变量文件解耦，防止排错成本增加

--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
-# 打包路径 根据项目不同按需配置
-VITE_BASE_URL = /
-VITE_IS_REQUEST_PROXY = true
-VITE_API_URL = https://service-bv448zsw-1257786608.gz.apigw.tencentcs.com
-VITE_API_URL_PREFIX = /api
+# 项目标题
+VITE_BASE_TITLE='TDesign Vue Next Starter'
+# 项目命名空间 用于隔离不同项目的样式或配置
+VITE_BASE_NAMESPACE=tdesign-starter
