--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,12 @@
-# 打包路径
-VITE_BASE_URL = /
-VITE_IS_REQUEST_PROXY = true
-VITE_API_URL = https://service-exndqyuk-1257786608.gz.apigw.tencentcs.com
-VITE_API_URL_PREFIX = /api
+# 打包路径 根据项目不同按需配置
+VITE_BASE_URL=/
+# 运行端口
+VITE_BASE_PORT=3002
+# 是否使用请求库代理 如果启用会跳过Vite自带代理
+VITE_USE_REQUEST_PROXY=true
+# 是否使用Vite Mock 使用请求库代理时失效
+VITE_USE_MOCK=false
+# 请求接口地址
+VITE_API_URL=https://service-exndqyuk-1257786608.gz.apigw.tencentcs.com
+# 请求接口前缀
+VITE_API_URL_PREFIX=/api
