chore(deps): pin pinia  2.2.4

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "echarts": "5.4.3",
     "lodash": "^4.17.21",
     "nprogress": "^0.2.0",
-    "pinia": "^2.1.7",
+    "pinia": "2.2.4",
     "pinia-plugin-persistedstate": "^3.2.0",
     "qrcode.vue": "^3.4.1",
     "qs": "^6.11.2",
