--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,15 @@
-node_modules
+# OS specific files
 .DS_Store
+
+# dependencies manager
+node_modules/
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
 
 # build files
 es/
