--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "echarts": "5.4.3",
     "lodash": "^4.17.21",
     "nprogress": "^0.2.0",
-    "pinia": "^2.1.7",
+    "pinia": "2.1.7",
     "pinia-plugin-persistedstate": "^3.2.0",
     "qrcode.vue": "^3.4.1",
     "qs": "^6.11.2",
@@ -43,6 +43,7 @@
     "@commitlint/config-conventional": "^18.6.0",
     "@types/echarts": "^4.9.21",
     "@types/lodash": "^4.17.6",
+    "@types/mockjs": "^1.0.10",
     "@types/nprogress": "^0.2.3",
     "@types/qs": "^6.9.11",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
@@ -65,7 +66,6 @@
     "less": "^4.2.0",
     "lint-staged": "^15.2.2",
     "mockjs": "^1.1.0",
-    "@types/mockjs": "^1.0.10",
     "postcss-html": "^1.6.0",
     "postcss-less": "^6.0.0",
     "prettier": "^3.2.5",
