--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "tdesign-icons-vue-next": "^0.2.2",
     "tdesign-vue-next": "^1.10.5",
     "tvision-color": "^1.6.0",
-    "vue": "3.3.13",
+    "vue": "^3.5.0",
     "vue-i18n": "^9.9.1",
     "vue-router": "~4.3.0"
   },
