--- a/package.json
+++ b/package.json
@@ -32,9 +32,9 @@
     "qrcode.vue": "^3.4.1",
     "qs": "^6.11.2",
     "tdesign-icons-vue-next": "^0.2.2",
-    "tdesign-vue-next": "^1.9.9",
+    "tdesign-vue-next": "^1.10.5",
     "tvision-color": "^1.6.0",
-    "vue": "3.3.13",
+    "vue": "^3.5.0",
     "vue-i18n": "^9.9.1",
     "vue-router": "~4.3.0"
   },
