feat(ESLint): migration to v9+

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
     "strictFunctionTypes": true,
     "strictBindCallApply": true,
     "noImplicitThis": true,
-    "alwaysStrict": true,
+    "alwaysStrict": true
   },
   "include": [
     "**/*.ts",
