--- a/package.json
+++ b/package.json
@@ -39,40 +39,40 @@
     "vue-router": "~4.3.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^18.6.0",
-    "@commitlint/config-conventional": "^18.6.0",
+    "@antfu/eslint-config": "^4.10.1",
+    "@commitlint/cli": "^19.8.0",
+    "@commitlint/config-conventional": "^19.8.0",
     "@types/echarts": "^4.9.21",
     "@types/lodash": "^4.17.6",
     "@types/mockjs": "^1.0.10",
     "@types/nprogress": "^0.2.3",
     "@types/qs": "^6.9.17",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vitejs/plugin-vue-jsx": "^3.0.2",
     "@vue/compiler-sfc": "~3.3.8",
-    "@vue/eslint-config-typescript": "^12.0.0",
+    "@vue/eslint-config-typescript": "^14.5.0",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^8.56.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-simple-import-sort": "^12.0.0",
-    "eslint-plugin-vue": "^9.21.1",
-    "eslint-plugin-vue-scoped-css": "^2.7.2",
+    "eslint": "^9.22.0",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-format": "^1.0.1",
+    "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "eslint-plugin-vue": "^10.0.0",
+    "eslint-plugin-vue-scoped-css": "^2.9.0",
+    "globals": "^16.0.0",
     "husky": "^9.1.7",
     "less": "^4.2.0",
     "lint-staged": "^15.2.2",
     "mockjs": "^1.1.0",
     "postcss-html": "^1.6.0",
     "postcss-less": "^6.0.0",
-    "prettier": "^3.2.5",
-    "stylelint": "~16.2.1",
-    "stylelint-config-standard": "^36.0.0",
+    "prettier": "^3.5.3",
+    "stylelint": "~16.16.0",
+    "stylelint-config-standard": "^37.0.0",
     "stylelint-order": "~6.0.4",
     "typescript": "~5.4.3",
+    "typescript-eslint": "^8.26.1",
     "vite": "^5.1.0",
     "vite-plugin-mock": "^3.0.1",
     "vite-svg-loader": "^5.1.0",
@@ -93,6 +93,6 @@
     ]
   },
   "engines": {
-    "node": ">=18.0.0"
-  }
+    "node": ">=18.18.0"
+  },
 }
