--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "postcss-html": "^1.6.0",
     "postcss-less": "^6.0.0",
     "prettier": "^3.5.3",
+    "rspack-resolver": "^1.1.1",
     "stylelint": "~16.16.0",
     "stylelint-config-standard": "^37.0.0",
     "stylelint-order": "~6.0.4",
