refactor(ESLint): 迁移ESLint至v9 (#826)
* chore(deps): 拉高依赖版本

* feat(ESLint): migration to v9+

* feat: 为i18n重写类型

* feat(ESLint): 迁移并优化有关代码

* types: 修正多语言类型

* chore: 移除无用配置文件

* fix(deps): 修复因为锁文件过期导致的编译错误

* fix(deps): 修复因为环境问题导致的编译错误

* fix(deps): 修复因为依赖问题导致的编译错误

* fix(eslint): typescript unused var fix, disable vue/padding-line-between-blocks

* chore: remove duplicate config

* style: add blank

* chore: 移除重复的配置

---------

Co-authored-by: ngyyuusora <jiliangsoft@live.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,13 +21,11 @@
     "strictFunctionTypes": true,
     "strictBindCallApply": true,
     "noImplicitThis": true,
-    "alwaysStrict": true,
+    "alwaysStrict": true
   },
   "include": [
     "**/*.ts",
     "src/**/*.d.ts",
-    "src/types/**/*.d.ts",
-    "src/**/*.ts",
     "src/**/*.tsx",
     "src/**/*.vue",
     "node_modules/tdesign-vue-next/global.d.ts"
