--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tencent/tdesign-vue-next-starter",
-  "version": "0.12.0",
+  "version": "0.13.0",
   "type": "module",
   "scripts": {
     "dev:mock": "vite --open --mode mock",
@@ -13,7 +13,7 @@
     "preview": "vite preview",
     "lint": "eslint --ext .vue,.js,.jsx,.ts,.tsx ./ --max-warnings 0",
     "lint:fix": "eslint --ext .vue,.js,jsx,.ts,.tsx ./ --max-warnings 0 --fix",
-    "stylelint": "stylelint src/**/*.{html,vue,sass,less}",
+    "stylelint": "stylelint src/**/*.{html,vue,css,sass,less}",
     "stylelint:fix": "stylelint --fix src/**/*.{html,vue,css,sass,less}",
     "prepare": "husky install",
     "site:preview": "npm run build && cp -r dist _site",
@@ -31,52 +31,50 @@
     "pinia-plugin-persistedstate": "^3.2.0",
     "qrcode.vue": "^3.4.1",
     "qs": "^6.13.1",
-    "tdesign-icons-vue-next": "^0.3.3",
+    "tdesign-icons-vue-next": "^0.3.4",
     "tdesign-vue-next": "^1.11.5",
     "tvision-color": "^1.6.0",
-    "vue": "^3.5.0",
+    "vue": "^3.5.13",
     "vue-i18n": "^9.9.1",
     "vue-router": "~4.3.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^18.6.0",
-    "@commitlint/config-conventional": "^18.6.0",
+    "@antfu/eslint-config": "^4.10.1",
+    "@commitlint/cli": "^19.8.0",
+    "@commitlint/config-conventional": "^19.8.0",
     "@types/echarts": "^4.9.21",
     "@types/lodash": "^4.17.6",
     "@types/mockjs": "^1.0.10",
     "@types/nprogress": "^0.2.3",
     "@types/qs": "^6.9.17",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
     "@vitejs/plugin-vue": "^5.0.4",
-    "@vitejs/plugin-vue-jsx": "^3.0.2",
+    "@vitejs/plugin-vue-jsx": "^4.1.1",
     "@vue/compiler-sfc": "~3.3.8",
-    "@vue/eslint-config-typescript": "^12.0.0",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^8.56.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-simple-import-sort": "^12.0.0",
-    "eslint-plugin-vue": "^9.21.1",
-    "eslint-plugin-vue-scoped-css": "^2.7.2",
+    "eslint": "^9.22.0",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "eslint-plugin-vue-scoped-css": "^2.9.0",
+    "globals": "^16.0.0",
     "husky": "^9.1.7",
     "less": "^4.2.0",
     "lint-staged": "^15.2.2",
     "mockjs": "^1.1.0",
     "postcss-html": "^1.6.0",
     "postcss-less": "^6.0.0",
-    "prettier": "^3.2.5",
-    "stylelint": "~16.2.1",
-    "stylelint-config-standard": "^36.0.0",
+    "prettier": "^3.5.3",
+    "rspack-resolver": "^1.1.1",
+    "stylelint": "~16.16.0",
+    "stylelint-config-standard": "^37.0.0",
     "stylelint-order": "~6.0.4",
     "typescript": "~5.4.3",
-    "vite": "^5.1.0",
+    "typescript-eslint": "^8.26.1",
+    "vite": "^6.2.2",
     "vite-plugin-mock": "^3.0.1",
     "vite-svg-loader": "^5.1.0",
-    "vue-tsc": "^1.8.27"
+    "vue-tsc": "^2.2.8"
   },
   "config": {
     "commitizen": {
@@ -93,6 +91,6 @@
     ]
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=18.18.0"
   }
 }
